--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   },
   "author": "luis.hwang",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.717.0",
     "cross-env": "^7.0.3",
-    "express": "^4.21.2"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1"
   }
 }
