--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "luis.hwang",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.717.0",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
