--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "mysql2": "^3.12.0",
     "prom-client": "^15.1.3",
     "prometheus-api-metrics": "^3.2.2"
   }
